--- a/index.html
+++ b/index.html
@@ -40,16 +40,17 @@
             <div class="star-field2"></div>
             <div class="star-field3"></div>
           </div>
-          <div class="mainimg" id="home">
-            <div class="venimg" data-aos="zoom-in">
-              <img src="69venture.png" alt="69">
-            </div>
-            <div class="welcome" data-aos="fade-down">
-              <span>69</span>
-              <span>Ventures</span>
-              <span>-</span>
-              <span>Hidden</span>
-              <span>Profit</span>
+          <div class="welmain">
+            <div class="mainimg" id="home">
+              <div class="venimg" data-aos="zoom-in">
+                <img src="69venture.png" alt="69">
+              </div>
+              <div class="welcome" data-aos="fade-down">
+                <span>Welcome</span>
+                <span>to</span>
+                <span>69</span>
+                <span>Ventures</span>
+              </div>
             </div>
           </div>
 
