--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title> 69 Ventures - Hiden Profit</title>
-    <meta name="description" content="69 Venture">
+    <title> 69 Ventures</title>
+    <meta name="description" content="69 Ventures">
     <link rel="icon" href="69venture.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="69 Venture">
+    <meta name="twitter:title" content="69 Ventures">
     <meta name="twitter:description" content="69 Venture">
     <meta name="twitter:image" content="69venture.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
