--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             <div class="media">
               <h data-aos="fade-down">OUR MEDIA</h>
               <p data-aos="fade-down">"Discover a new dimension of connectivity and engagement with 69 Ventures – where innovation meets community, creating a vibrant social landscape that fosters collaboration, inspiration, and limitless possibilities."</p>
+              <p style="font-size: 20px; margin-top: 10px;">Official Mail: 69.venture.fund@gmail.com</p>
               <div class="pros" data-aos="fade-up">
                 <div class="profolioimg">
                   <a href="https://t.me/Ventures69"><img src="telegram.png">Telegram</a>
@@ -170,6 +171,10 @@
                 </div>
               </div>
             </div>
+          </div>
+
+          <div class="allss">
+            <h>2023 69Ventures. Powered by 69Ventures LTD</h>
           </div>
 
         </div>
