--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
                 <div class="zsocial">
                   <div class="fpro">
-                    <h>Social</h>
+                    <h>SOCIAL</h>
                   </div>
                   <div class="apro">
                     <a href="https://twitter.com/ventures69">X (Twitter)</a>
