--- a/index.html
+++ b/index.html
@@ -135,6 +135,43 @@
             </div>
           </div>
 
+          <div class="title-cards">
+            <h2>CERTIFICATE</h2>
+          </div>
+          <div class="container-card">
+  
+            <div class="card">
+              <figure>
+                <img src="cetificateltd.png">
+              </figure>
+              <div class="contenido-card">
+                <h3>CERTIFICATE OF INCORPORATION</h3>
+                <p>The Registrar of Companies for England and Wales, hereby certifies that 69 VENTURES LTD is this day incorporated under the Companies Act 2006 as a private company, that the company is limited by shares, and the situation of its registered office is in England and Wales. Given at Companies House, Cardiff, on 14th December 2023.</p>
+                <a href="69venturesltd.pdf" target="_blank">See more</a>
+              </div>
+            </div>
+            <div class="card">
+              <figure>
+                 <img src="cetificateltd.png">
+              </figure>
+            <div class="contenido-card">
+              <h3>CERTIFICATE OF INCORPORATION</h3>
+              <p>The Registrar of Companies for England and Wales, hereby certifies that 69 VENTURES LTD is this day incorporated under the Companies Act 2006 as a private company, that the company is limited by shares, and the situation of its registered office is in England and Wales. Given at Companies House, Cardiff, on 14th December 2023.</p>
+              <a href="CERTIFICATE69.pdf" target="_blank">See more</a>
+            </div>
+          </div>
+          <div class="card">
+            <figure>
+              <img src="memart.png">
+            </figure>
+            <div class="contenido-card">
+              <h3>MEMORANDUM AND ARTICLES OF ASSOCIATION</h3>
+              <p style="line-height:;">COMPANY HAVING A SHARE CAPITAL MEMORANDUM OF ASSOCIATION OF 69 VENTURES LTD.<br>Each subscriber to this memorandum of association wishes to form a company under the Companies Act 2006 and agrees to become a member of the Company and to take at least one share.<br>Name of each subscriber is <span style="font-size: 18px">Connor Norton</span></p>
+              <a href="MEMARTS69.pdf" target="_blank">See more</a>
+           </div>
+          </div>
+        </div>
+
           <div class="ventures69">
             <div class="footer">
               <div class="gridmenu">
