--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
           <div class="ourservices" id="services">
             <div class="services">
-                <h1 data-aos="fade-down">Our Services<h1>
+                <h1 data-aos="fade-down">Services<h1>
             </div>
             <div class="mainservices">
               <p data-aos="fade-down">69 VENTURUES - Where we connect and shape the future of businesses! At 69 Ventures, we take pride in offering a diverse range of services to support businesses across all industries. Here's an introduction to our key services:</p>
@@ -100,7 +100,7 @@
             <div class="profolio">
               <div class="promain">
                 <div class="procon">
-                  <h data-aos="fade-up">Our Profolio</h>
+                  <h data-aos="fade-up">Profolio</h>
                   <p data-aos="fade-up">Our portfolio is not only about project completion but also about building long-term partnership relationships and delivering positive results. We are committed to customer satisfaction and strive to ensure that each project adds value and meets or exceeds expectations. Every partnership with 69 Ventures is not just a project but a journey together towards success.</p>
                   <div class="pros" data-aos="fade-up">
                     <div class="profolioimg">
@@ -120,10 +120,10 @@
 
           <div class="ourmedia" id="media">
             <div class="media">
-              <h data-aos="fade-down">OUR MEDIA</h>
-              <p data-aos="fade-down">"Discover a new dimension of connectivity and engagement with 69 Ventures – where innovation meets community, creating a vibrant social landscape that fosters collaboration, inspiration, and limitless possibilities."</p>
-              <p style="font-size: 23px; margin-top: 10px;"><span style="font-size: 25px">Official Mail:</span> contact@69ventures.io</p>
-              <p style="font-size: 23px; margin-top: 10px;"><span style="font-size: 25px">Partnership:</span> 69.venture.fund@gmail.com</p>
+              <h data-aos="fade-down">MEDIA</h>
+              <p data-aos="fade-down" style="font-size: 18px;">"Discover a new dimension of connectivity and engagement with 69 Ventures – where innovation meets community, creating a vibrant social landscape that fosters collaboration, inspiration, and limitless possibilities."</p>
+              <p style="font-size: 23px; margin-top: 10px;"><span style="font-size: 23px">Official Mail:</span> contact@69ventures.io</p>
+              <p style="font-size: 23px; margin-top: 5px;"><span style="font-size: 23px">Partnership:</span> 69.venture.fund@gmail.com</p>
               <div class="pros" data-aos="fade-up">
                 <div class="profolioimg">
                   <a href="https://t.me/Ventures69"><img src="telegram.png">Telegram</a>
@@ -131,6 +131,7 @@
                 <div class="profolioimg">
                   <a href="https://twitter.com/ventures69"><img src="twitter.png">Twitter</a>
                 </div>
+
               </div>
             </div>
           </div>
@@ -150,6 +151,7 @@
                 <a href="69venturesltd.pdf" target="_blank">See more</a>
               </div>
             </div>
+            
             <div class="card">
               <figure>
                 <img src="memart.png">
@@ -171,6 +173,8 @@
                     <h>69 VENTURES</h>
                   </div>
                   <div class="hidenprofit">
+                    <h style="margin-top: 3%;">Company Name: <span style="font-weight: bold;">69 VENTURES LTD</span></h><br>
+                    <h style="margin-bottom: 3%;">Company Type: <span style="font-weight: bold;">Private company limited by shares</span></h><br>
                     <h>Embark on a journey of innovation, growth, and success with 69 Ventures. Let us be your trusted partner in navigating the challenges and opportunities of today's dynamic business environment. Together, we can turn visions into reality and create a future of limitless possibilities.</h>
                   </div>
                 </div>
