--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                     <div class="profolioimg">
                       <a href="https://t.me/froggy_bsc"><img src="froggy.png"></a>
                     </div>
+                    <div class="profolioimg">
+                      <a href="https://t.me/cat_wif"><img src="catwif.png"></a>
+                    </div>
                   </div>
                 </div>
                 <div style="display: flex; justify-content: center;" data-aos="zoom-in" class="profoimg">
@@ -122,6 +125,38 @@
             <div class="media">
               <h data-aos="fade-down">MEDIA</h>
               <p data-aos="fade-down" style="font-size: 18px;">"Discover a new dimension of connectivity and engagement with 69 Ventures – where innovation meets community, creating a vibrant social landscape that fosters collaboration, inspiration, and limitless possibilities."</p>
+              <style>
+                  .charity-fund {
+                      font-size: 23px;
+                      margin-top: 5px;
+                      color: yellow;
+                  }
+                  .address {
+                      font-size: 23px;
+                  }
+                  @media (max-width: 900px){
+                    .address {
+                      font-size: 18px;
+                    }
+                  }
+                  @media (max-width: 600px){
+                    .address {
+                      font-size: 16px;
+                    }
+                  }
+                  @media (max-width: 406px){
+                    .address {
+                      font-size: 14px;
+                    }
+                  }
+                  @media (max-width: 375px){
+                    .address {
+                      font-size: 13px;
+                    }
+                  }
+              </style>
+              <p class="charity-fund">Charity Fund:</p>
+              <p class="address">0x487DF73090dBf7E94703AeF66A7Bf20B831Ae55f</p>
               <p style="font-size: 23px; margin-top: 10px;"><span style="font-size: 23px">Official Mail:</span> contact@69ventures.io</p>
               <p style="font-size: 23px; margin-top: 5px;"><span style="font-size: 23px">Partnership:</span> 69.venture.fund@gmail.com</p>
               <div class="pros" data-aos="fade-up">
