--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
           <div class="ourservices" id="services">
             <div class="services">
-                <h1 data-aos="fade-down">Services<h1>
+                <h1 data-aos="fade-down">Services</h1>
             </div>
             <div class="mainservices">
               <p data-aos="fade-down">69 VENTURUES - Where we connect and shape the future of businesses! At 69 Ventures, we take pride in offering a diverse range of services to support businesses across all industries. Here's an introduction to our key services:</p>
@@ -155,10 +155,10 @@
                     }
                   }
               </style>
-              <p class="charity-fund">Charity Fund:</p>
-              <p class="address">0x487DF73090dBf7E94703AeF66A7Bf20B831Ae55f</p>
-              <p style="font-size: 23px; margin-top: 10px;"><span style="font-size: 23px">Official Mail:</span> contact@69ventures.io</p>
-              <p style="font-size: 23px; margin-top: 5px;"><span style="font-size: 23px">Partnership:</span> 69.venture.fund@gmail.com</p>
+              <p class="charity-fund" data-aos="fade-up">Charity Fund:</p>
+              <p class="address" data-aos="fade-up">0x487DF73090dBf7E94703AeF66A7Bf20B831Ae55f</p>
+              <p style="font-size: 23px; margin-top: 10px;" data-aos="fade-up"><span style="font-size: 23px">Official Mail:</span> contact@69ventures.io</p>
+              <p style="font-size: 23px; margin-top: 5px;" data-aos="fade-up"><span style="font-size: 23px">Partnership:</span> 69.venture.fund@gmail.com</p>
               <div class="pros" data-aos="fade-up">
                 <div class="profolioimg">
                   <a href="https://t.me/Ventures69"><img src="telegram.png">Telegram</a>
@@ -166,36 +166,51 @@
                 <div class="profolioimg">
                   <a href="https://twitter.com/ventures69"><img src="twitter.png">Twitter</a>
                 </div>
-
               </div>
             </div>
           </div>
 
-          <div class="title-cards">
-            <h2>CERTIFICATE</h2>
-          </div>
-          <div class="container-card">
-  
-            <div class="card">
-              <figure>
-                <img src="cetificateltd.png">
-              </figure>
-              <div class="contenido-card">
-                <h3>CERTIFICATE OF INCORPORATION</h3>
-                <p>The Registrar of Companies for England and Wales, hereby certifies that 69 VENTURES LTD is this day incorporated under the Companies Act 2006 as a private company, that the company is limited by shares, and the situation of its registered office is in England and Wales. Given at Companies House, Cardiff, on 14th December 2023.</p>
-                <a href="69venturesltd.pdf" target="_blank">See more</a>
+          <div class="charity" id="charity">
+            <div class="bg-charity">
+              <div class="table-title" data-aos="fade-down">CONTRIBUTED</div>
+                <table id="contributeTable" class="no-grid-table">
+                </table>
+              <div class="pagination">
+                <button onclick="firstPage()">First</button>
+                <button onclick="previousPage()">&lt;</button>
+                <span id="currentPageDisplay">Page 1 of X</span>
+                <button onclick="nextPage()">&gt;</button>
+                <button onclick="lastPage()">Last</button>
               </div>
             </div>
-            
-            <div class="card">
-              <figure>
-                <img src="memart.png">
-              </figure>
-              <div class="contenido-card">
-                <h3>MEMORANDUM AND ARTICLES OF ASSOCIATION</h3>
-                <p style="line-height:;">COMPANY HAVING A SHARE CAPITAL MEMORANDUM OF ASSOCIATION OF 69 VENTURES LTD.<br>Each subscriber to this memorandum of association wishes to form a company under the Companies Act 2006 and agrees to become a member of the Company and to take at least one share.<br>Name of each subscriber is <span style="font-size: 18px">Connor Norton</span></p>
-                <a href="MEMARTS69.pdf" target="_blank">See more</a>
-             </div>
+          </div>
+
+          <div class="cetificated">
+            <div class="title-cards">
+              <h2 data-aos="fade-down">CERTIFICATE</h2>
+            </div>
+            <div class="container-card" data-aos="fade-up">
+              <div class="card">
+                <figure>
+                  <img src="cetificateltd.png">
+                </figure>
+                <div class="contenido-card">
+                  <h3>CERTIFICATE OF INCORPORATION</h3>
+                  <p>The Registrar of Companies for England and Wales, hereby certifies that 69 VENTURES LTD is this day incorporated under the Companies Act 2006 as a private company, that the company is limited by shares, and the situation of its registered office is in England and Wales. Given at Companies House, Cardiff, on 14th December 2023.</p>
+                  <a href="69venturesltd.pdf" target="_blank">See more</a>
+                </div>
+              </div>
+              
+              <div class="card">
+                <figure>
+                  <img src="memart.png">
+                </figure>
+                <div class="contenido-card">
+                  <h3>MEMORANDUM AND ARTICLES OF ASSOCIATION</h3>
+                  <p style="line-height:;">COMPANY HAVING A SHARE CAPITAL MEMORANDUM OF ASSOCIATION OF 69 VENTURES LTD.<br>Each subscriber to this memorandum of association wishes to form a company under the Companies Act 2006 and agrees to become a member of the Company and to take at least one share.<br>Name of each subscriber is <span style="font-size: 18px">Connor Norton</span></p>
+                  <a href="MEMARTS69.pdf" target="_blank">See more</a>
+               </div>
+              </div>
             </div>
           </div>
 
