--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                   </div>
                 </div>
-                <div style="display: flex; justify-content: center;" data-aos="zoom-in" class="profoimg">
+                <div data-aos="zoom-in" class="profoimg">
                   <img src="profolio.png">
                 </div>
               </div>
