--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <a href="#services">Services</a>
             <a href="#profolio">Profolio</a>    
             <a href="#media">Media</a>
+            <a href="#charity">Charity</a>
+            <a href="#certificate">Certificate</a>
         </div>  
       </div>
     </header>
@@ -185,7 +187,7 @@
             </div>
           </div>
 
-          <div class="cetificated">
+          <div class="cetificated" id="certificate">
             <div class="title-cards">
               <h2 data-aos="fade-down">CERTIFICATE</h2>
             </div>
