--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
                   <div class="apro">
                     <a href="https://twitter.com/ventures69">X (Twitter)</a>
                     <a href="https://t.me/Ventures69">Telegram</a>
+                    <a href="">Medium</a>
                     <a href="">Youtube</a>
                     <a href="">Tiktok</a>
                   </div>
