--- a/index.html
+++ b/index.html
@@ -157,8 +157,10 @@
                     }
                   }
               </style>
-              <p class="charity-fund" data-aos="fade-up">Charity Fund:</p>
+              <p class="charity-fund" data-aos="fade-up">BNB Charity:</p>
               <p class="address" data-aos="fade-up">0x487DF73090dBf7E94703AeF66A7Bf20B831Ae55f</p>
+              <p class="charity-fund" data-aos="fade-up">SOL Charity:</p>
+              <p class="address" data-aos="fade-up">2oYDQh5YrfEZ6KuvTPSxabxmX3xDqTxVTbaKNwjUKwB9</p>
               <p style="font-size: 23px; margin-top: 10px;" data-aos="fade-up"><span style="font-size: 23px">Official Mail:</span> contact@69ventures.io</p>
               <p style="font-size: 23px; margin-top: 5px;" data-aos="fade-up"><span style="font-size: 23px">Partnership:</span> 69.venture.fund@gmail.com</p>
               <div class="pros" data-aos="fade-up">
